# nixl

./: .gitignore  ATTRIBUTIONS-CPP.md  ATTRIBUTIONS-Python.md  CODEOWNERS  Cargo.toml  README.md  meson.build  meson_options.txt  pyproject.toml
.ci/: cidemo-init.sh  cleanup-spec.json
.ci/dockerfiles/: Dockerfile.base  Dockerfile.gpu-test  Dockerfile.sglang-base  Dockerfile.vllm-base
.ci/docs/: DebugCoreDumps.md  build-wheel-matrix-ci.md  ci-overview.md  crash-debug.md
.ci/jenkins/lib/: build-container-matrix.yaml  build-container-pr-matrix.yaml  build-llm-container-matrix.yaml  build-matrix.yaml  build-wheel-matrix.yaml  build-wheel-nightly-matrix.yaml  cleanup-matrix.yaml  test-dl-ep-matrix.yaml  test-dl-matrix.yaml  test-llm-container-matrix.yaml  test-matrix.yaml  test-sanitizer-matrix.yaml
.ci/jenkins/pipeline/: Jenkinsfile  Jenkinsfile.dispatcher  proj-jjb.yaml
.ci/scripts/: artifactory-cleanup-by-time.sh  common.sh
.ci/scripts/llm-tests/: common.sh  test_sglang.sh  test_vllm.sh
.github/: actionlint.yaml
.github/workflows/: ci.yml
.gitlab/: build.sh  test_cpp.sh  test_ep.sh  test_nixlbench.sh  test_python.sh  test_rust.sh  test_sanitizer.sh  test_vllm_sglang_sanity.sh
benchmark/kvbench/runtime/: etcd_rt.py
benchmark/kvbench/test/: storage_backend.py  traffic_pattern.py
benchmark/nixlbench/: .gitignore  README.md  meson.build
benchmark/nixlbench/contrib/: Dockerfile  build.sh
benchmark/nixlbench/src/: main.cpp
benchmark/nixlbench/src/runtime/: asio_runtime.h  runtime.cpp  runtime.h
benchmark/nixlbench/src/runtime/etcd/: etcd_rt.cpp  etcd_rt.h
benchmark/nixlbench/src/utils/: utils.cpp  utils.h
benchmark/nixlbench/src/worker/: worker.cpp  worker.h
benchmark/nixlbench/src/worker/nixl/: meson.build  nixl_mem_region.cpp  nixl_mem_region.h  nixl_worker.cpp  nixl_worker.h
contrib/: Dockerfile  Dockerfile.manylinux  Dockerfile.vllm  build-container.sh  build-wheel.sh  check_ucx_binding.py  check_ucx_wheel_bundle.py  wheel_add_ucx_plugins.py  wheel_merge.py
docs/: telemetry.md  tracing.md
examples/device/ep/: meson.build
examples/device/ep/csrc/: nixl_ep.cpp
examples/device/ep/csrc/kernels/: api.cuh  configs.cuh  nixl_ep_ll.cu  utils.cuh
examples/device/ep/nixl_ep/: __init__.py
examples/device/ep/tests/elastic/: elastic.py  expansion_fault_contraction.json
examples/python/: telemetry_reader.py
src/api/cpp/: nixl.h  nixl_descriptors.h  nixl_soa.h  nixl_types.h
src/api/cpp/backend/: backend_aux.h  backend_engine.h  backend_plugin.h
src/api/cpp/telemetry/: telemetry_exporter.h  telemetry_plugin.h
src/api/python/: _api.py
src/bindings/python/: nixl_bindings.cpp
src/bindings/python/nixl-meta/: meson.build  nixl_meta_utils.py  pyproject.toml.in
src/bindings/python/nixl-meta/nixl/: __init__.py
src/bindings/python/nixl-meta/nixl_ep/: __init__.py
src/bindings/rust/tests/: tests.rs
src/bindings/rust/tests/env_guard/: mod.rs
src/core/: agent_data.h  meson.build  nixl_agent.cpp  nixl_listener.cpp  nixl_plugin_manager.cpp  plugin_manager.h  sync.h  transfer_request.h
src/core/telemetry/: nop_exporter.h  nop_plugin.cpp  telemetry.cpp  telemetry.h  telemetry_event.h
src/core/tracing/: trace.h  trace_macros.h  trace_plugin.h  tracer.cpp
src/infra/: mem_section.h  nixl_descriptors.cpp  nixl_memory_section.cpp
src/plugins/: meson.build
src/plugins/cuda_gds/: gds_backend.cpp  gds_backend.h  meson.build
src/plugins/gds_mt/: gds_mt_backend.cpp  gds_mt_backend.h
src/plugins/hf3fs/: hf3fs_backend.cpp  hf3fs_backend.h
src/plugins/libfabric/: README.md  libfabric_backend.cpp  libfabric_backend.h  libfabric_connection.cpp  libfabric_connection.h  libfabric_handshake.cpp  libfabric_plugin.cpp  meson.build
src/plugins/posix/: posix_backend.cpp  posix_backend.h
src/plugins/telemetry/: README.md
src/plugins/telemetry/common/: histogram_buckets.h
src/plugins/telemetry/doca/: README.md  doca_exporter.cpp  doca_exporter.h  meson.build
src/plugins/telemetry/prometheus/: README.md  meson.build  prometheus_exporter.cpp  prometheus_exporter.h
src/plugins/tracing/: meson.build
src/plugins/tracing/nvtx/: meson.build  nvtx_backend.cpp  nvtx_backend.h  nvtx_events.cpp  nvtx_events.h  nvtx_payload_schemas.cpp  nvtx_payload_schemas.h  nvtx_plugin.cpp  nvtx_span.cpp  nvtx_span.h  nvtx_trace_backend.cpp  nvtx_trace_backend.h
src/plugins/ucx/: meson.build  ucx_backend.cpp  ucx_backend.h  ucx_plugin.cpp  ucx_utils.cpp  ucx_utils.h
src/utils/common/: meson.build  nixl_duration.cpp  nixl_duration.h  nixl_memory_pool.h  str_util.h
src/utils/file/: file_path_mode.h
src/utils/libfabric/: libfabric_common.h  libfabric_rail.cpp  libfabric_rail.h  libfabric_rail_manager.cpp
src/utils/ucx/: ucx_utils.cpp  ucx_utils.h
test/doca-telemetry/: histogram_parity.h  meson.build  open_metrics_text_parser.h  scrape_util.h  telemetry_doca_nixl_test.cpp  telemetry_doca_test.cpp  telemetry_histogram_parity_test.cpp  timeseries.h
test/gtest/: common.h  error_handling.cpp  meson.build  nixl_duration_test.cpp  plugin_manager.cpp  prometheus_telemetry_fixture.h  run_nsys_tracing.sh  telemetry_benchmark.cpp  telemetry_histogram_test.cpp  telemetry_prometheus_test.cpp  telemetry_test.cpp  test_transfer.cpp
test/gtest/sanitizer/: lsan.supp  tsan.supp  ubsan.supp
test/gtest/unit/: meson.build
test/gtest/unit/agent/: meson.build  soa.cpp
test/gtest/unit/tracing/: meson.build  tracing_test.cpp
test/gtest/unit/util/: meson.build  str_util_test.cpp
test/nixl/: agent_example.cpp
test/python/: test_nixl_api.py  test_nixl_bindings.py
test/unit/plugins/posix/: nixl_posix_test.cpp
test/unit/plugins/ucx/: meson.build
test/unit/utils/ucx/: ucx_am_test.cpp  ucx_worker_test.cpp
